--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author":
-    "Matthew Burfield <burfie@hotmail.com> (https://matthew-burfield.github.io/)",
+  "author": "Matthew Burfield <burfie@hotmail.com> (https://matthew-burfield.github.io/)",
   "license": "MIT",
   "dependencies": {
     "axios": "0.18.0",
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "moment": "2.22.1"
   }
 }
